# nxcleus

./: .env.example  .gitignore  JUDGES.md  LICENSE  README.md
backend/: Dockerfile  Dockerfile.codeexec  README.md  pyproject.toml
backend/app/: config.py  events.py  ids.py  main.py  safe_paths.py
backend/app/api/: admin.py  auth.py  connections.py  datasets.py  deps.py  economics.py  fleet.py  jobs.py  policies.py  processes.py  proxy.py  runs.py  sandbox.py  sse.py  traces.py
backend/app/boundary/: egress.py  errors.py  intake.py  ocr.py  proxy_token.py  sanitize.py  secrets.py  vault.py  whisper.py
backend/app/certify/: stage2.py
backend/app/conduct/: conductor.py
backend/app/consolidate/: stage5.py
backend/app/db/: dao.py  engine.py  models.py  schema.sql
backend/app/delivery/: stage7.py
backend/app/fleet/: health.py  manager.py  pool.py  stage4.py
backend/app/metering/: invoice.py  meter.py  rates.py
backend/app/models/: clients.py  (+2 more)
backend/tests/: conftest.py  test_auth.py  test_boundary.py  test_byod.py  test_codeexec_verification.py  test_economics_truth.py  test_ground_truth_compare.py  test_hardening.py  test_instantiate.py  test_job_recovery.py  test_live_surface.py  test_policies.py  test_process_delivery_truth.py  test_process_runtime.py  test_proxy_enforcement.py  test_quality_wave.py  test_reliability_guards.py  test_resumability.py  test_safe_paths.py  test_sandbox_path.py  test_seeds_new.py  test_stage4_verification.py  test_stage5_validation.py  test_stage6_delivery_truth.py  test_state_machine.py  test_structured_output.py
(+302 files in other folders)
