[project]
name = "nxcleus-backend"
version = "0.1.0"
description = "Nxcleus — adaptive sovereign process platform (control plane)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "greenlet>=3.0",
    "aiosqlite>=0.20",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "anthropic>=0.40",
    "python-ulid>=3.0",
    "pyyaml>=6.0",
    "cryptography>=43.0",
    "python-multipart>=0.0.12",
    "jsonschema>=4.23",
    "pillow>=12.3.0",
    "pypdf>=6.14.2",
    "pytesseract>=0.3.13",
    "psycopg[binary]>=3.2",
    "pymysql>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[tool.uv]
# Application project, not a distributable library — uv manages the venv + deps only.
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]  # long lines tolerated; FastAPI Depends() in defaults is idiomatic
